--- a/paper/incl_intro.tex
+++ b/paper/incl_intro.tex
@@ -106,14 +106,14 @@ Brittle thin film system show pattern formation and complex branch transitions. 
 Stability is a conceptually different notion when constraints play a role.
 The loss of such a property for a stationary points of an energy functional is of paramount importance in materials science and engineering. Illustrative in this sense are Euler buckling~\cite{Bettiol2020-ey}, wrinkling in thin films~\cite{Hutchinson2013-jk}, homogeneous nucleation of dislocations in a crystal~\cite{Carpio2005-bv,Plans2007-cx,Baggio2019-rs,Mayer2022-km,Baggio2023-qu}, buckling of lattice structures~\cite{Combescure2016-dy,Bertoldi2008-au}, nucleation of cracks in soft solids or in pantographic structures \cite{Riccobelli2023-fc,Salman2021-mn}, plastic  avalanches in crystals or amorphous materials \cite{Zhang2020-ax,Weiss2021-db,Yang2020-zm}.
 
-The absence of analytical solutions in strongly non-linear settings requires resorting to numerical methods for computing and predicting equilibrium configurations that correspond to the minima of an energy functional. The minimization process involves discretizing the continuum fields onto a computational grid using methods such as finite elements, finite differences, or spectral techniques~\cite{Salman2009-qv,Liu2013-sj,Hu2021-mq}. Afterwards, an iterative solver is employed to seek minimum energy states, with options including the Newton-Raphson method~\cite{Wick2017-bo}, fixed-point iteration~\cite{Chen2019-mn,Kirkesaether_Brun2020-wa,Storvik2021-cd}, line-search-based descent algorithms like steepest descent or conjugate gradient~\cite{Stiefel1952-fw,Dai1999-hz}, quasi-Newton methods such as the highly-efficient Limited-memory Broyden-Fletcher-Goldfarb-Shanno (\textsc{L-BFGS}) approach~\cite{Liu1989-kl} which involves approximating the Hessian matrix, or more recent advancements like the fast inertial relaxation engine (\textsc{FIRE})~\cite{Guenole2020-tc}. These solvers iteratively refine solutions starting from an initial guess provided as part of the solution procedure. Despite their widespread application, there remains a lack of clear understanding regarding the performance of these algorithms and their effectiveness in locating local minima. 
+The absence of analytical solutions in strongly non-linear settings requires resorting to numerical methods for computing and predicting equilibrium configurations that correspond to the minima of an energy functional. The minimization process involves discretizing the continuum fields onto a computational grid using methods such as finite elements, finite differences, or spectral techniques~\cite{Salman2009-qv,Liu2013-sj,Hu2021-mq}. Afterwards, an iterative solver is employed to seek equilibrium energy states, with options including the Newton-Raphson method~\cite{Wick2017-bo}, fixed-point iteration~\cite{Chen2019-mn,Kirkesaether_Brun2020-wa,Storvik2021-cd}, line-search-based descent algorithms like steepest descent or conjugate gradient~\cite{Stiefel1952-fw,Dai1999-hz}, quasi-Newton methods such as the highly-efficient Limited-memory Broyden-Fletcher-Goldfarb-Shanno (\textsc{L-BFGS}) approach~\cite{Liu1989-kl} which involves approximating the Hessian matrix, or more recent advancements like the fast inertial relaxation engine (\textsc{FIRE})~\cite{Guenole2020-tc}. These solvers iteratively refine solutions starting from an initial guess provided as part of the solution procedure. Despite their widespread application, there remains a lack of clear understanding regarding the performance of these algorithms and their effectiveness in locating local minima. 
 
 % This work. 
 % Notably, in the phase-field theory of fracture, the initiation of a crack is preceded by a localization of the damage field, .
 
-The fracture phenomenon of thin films bonded to substrates unveils a myriad of complex crack patterns, as evidenced by numerical studies \cite{Baldelli2014-ho,Alessi2019-bx,Hu2020-nt,Salman2021-mn,Baldelli2021-gc}, resembling those observed in natural contexts such as sand or dried mud \cite{Goehring2010-xz}, and even in biological structures like animal skin \cite{Qin2014-wz}. These observations hold particular relevance in the domain of stretchable and flexible electronics \cite{Faurie2019-to,Godard2022-ss} including  self-healing metal thin films on a flexible substrates \cite{Trost2024-ca}. 
-Within this study, centered on the numerical computation of evolutionary solutions for phase-field fracture models, we consider two one-dimensional phase-field fracture models of a brittle membrane on two types of substrates: one stiff one compliant. The finite stiffness of the substrate in the second scenario leads to nontrivial qualitative differences in terms of uniqueness of the evolution path, associated to the loss of stability of the unfractured solution~\cite{Baldelli2014-ho,Kuhn2015-rt,Baldelli2021-gc,Harandi2023-cd}.
-The first model describes a brittle thin film deposited on a stiff (rigid) substrate, while the second model involves a compliant yet unbreakable substrate that can undergo non-uniform deformations. 
+The fracture phenomenon of thin films bonded to substrates unveils a myriad of complex crack patterns, as evidenced by numerical studies \cite{Baldelli2014-ho,Alessi2019-bx,Hu2020-nt,Salman2021-mn,Baldelli2021-gc}, resembling those observed in natural contexts such as sand or dried mud \cite{Goehring2010-xz}, and even in biological structures like animal skin \cite{Qin2014-wz} and bark~\cite{chattaway:1955, shen:2020}. These observations hold particular relevance in the domain of stretchable and flexible electronics \cite{Faurie2019-to,Godard2022-ss} including  self-healing metal thin films on a flexible substrates \cite{Trost2024-ca}. 
+Within this study, centered on the numerical computation of evolutionary solutions for phase-field fracture models, we consider two one-dimensional phase-field fracture models of a brittle membrane on two types of substrates: one stiff, one compliant. The first model describes a brittle thin film deposited on a stiff (rigid) substrate, while the second model involves a compliant yet unbreakable substrate that can undergo non-uniform deformations. The finite stiffness of the substrate in the second scenario leads to nontrivial qualitative differences in terms of uniqueness of the evolution path, associated to the loss of stability of the unfractured solution~\cite{Baldelli2014-ho,Kuhn2015-rt,Baldelli2021-gc,Harandi2023-cd}.
+
 
 Despite the one-dimensional setting we adopt here which allows for analytical predictions, these models reveal a complex landscape of equilibrium states with multiple local minima.
 % , POSTPONING the need for two-dimensional analysis\comment[id=ALB]{Unclear}. 
@@ -131,7 +131,7 @@ To discuss this scenario we distinguish two settings, namely i) that in which da
 The rest of the paper is organized as follows. In Section \ref{sec:rigid}, we present one-dimensional phase-field fracture models with both rigid and compliant elastic foundations. In Section \ref{sec:stability} we focus on the analysis  of linear and non-linear stability regarding trivial solutions. In Section \ref{sec:numerics}, we construct the equilibrium map in the reversible setup, discuss the selection of equilibrium branches using various numerical optimization algorithms, and explore how irreversibility affects the stability of solutions. In the final Section \ref{sec:discussion}  we summarize our results.
 
 
-\paragraph{Notation.} We employ standard notation for scalar Sobolev spaces defined on the unit interval, such as $H^1(0, 1)$, derivtives of one-dimensional fields, and matrix indices. Subscripted $t$ means $t$-parametrised quantities, superscripted $(k)$ means $k$-th iterate of an iterative algorithm. 
+\paragraph{Notation.} We employ standard notation for scalar Sobolev spaces defined on the unit interval, such as $H^1(0, 1)$, derivatives of one-dimensional fields, and matrix indices. We indicate the $L^2(0, 1)$-inner product of functions $u, v$ by $\langle u, v\rangle=\int_0^1 uv dx$. Subscripted $t$ means $t$-parametrised quantities, superscripted $(k)$ means $k$-th iterate of an iterative algorithm. 
 We indicate with boldface letters finite element matrices and vectors. 
 We use the prime sign to indicates spatial derivatives. Throughout the investigation we consider a 2-layer structure. Quantities related to the substrate (fields, material parameters, energies) are denoted with a tilde.
 We use American English spelling throughout the text.
