--- a/paper/main.tex
+++ b/paper/main.tex
@@ -6,9 +6,11 @@
 % \usepackage[english]{babel}
 
 % Bibliography management
-%\usepackage[backend=biber,style=alphabetic]{biblatex}
-%\addbibresource{mybibliography.bib} % Add your .bib file
+\usepackage[backend=biber,style=alphabetic]{biblatex}
+\addbibresource{mybibliography.bib} % Add your .bib file
 \usepackage[]{graphicx}
+\graphicspath{{../../images/}}
+
 \usepackage{graphbox}
 \usepackage{caption}
 \captionsetup[figure]{font=footnotesize}
@@ -43,7 +45,7 @@
 % Document title, authors, and affiliations
 \title{
     % Navigating Among Local Minima via Numerical Optimization // \\ 
-Navigating with Stability: Local Minima, Patterns, and Evolution in a 1D Fracture Model}
+Navigating with Stability: Local Minima, Patterns, and Evolution in a Gradient Damage Fracture Model}
 \author[1]{M. M. Terzi}
 \author[1,2]{O. U. Salman}
 \author[1]{D. Faurie}
@@ -59,7 +61,6 @@ Navigating with Stability: Local Minima, Patterns, and Evolution in a 1D Fractur
 \maketitle
 
 
-
 \begin{abstract}
 In phase-field theories of brittle fracture, crack initiation, growth and path selection are investigated using non-convex energy functionals and a stability criterion. The lack of convexity with respect to the state poses difficulties to monolithic solvers that aim to solve for kinematic and internal variables, simultaneously. In this paper, we inquire into the effectiveness of quasi-Newton algorithms as an alternative to conventional Newton-Raphson solvers. These algorithms improve convergence by constructing a positive definite approximation of the Hessian, bargaining improved convergence with the risk of missing bifurcation points and stability thresholds. Our study focuses on one-dimensional phase-field fracture models of brittle thin films on  elastic foundations. Within this framework, in the absence of irreversibility constraint, we construct an equilibrium map that represents all stable and unstable equilibrium states as a function of the external load, using well-known branch-following bifurcation techniques. Our main finding is that quasi-Newton algorithms fail to select stable evolution paths without exact  second variation information. To solve this issue, we perform a spectral analysis of the full Hessian, providing optimal perturbations that enable quasi-Newton methods to follow a stable and potentially unique path for crack evolution. Finally, we discuss the stability issues and optimal perturbations in the case when the damage irreversibility is present, changing the topological structure of the set of admissible perturbations from a linear vector space to a convex cone.
 \end{abstract}
@@ -71,6 +72,10 @@ In phase-field theories of brittle fracture, crack initiation, growth and path s
 \input{incl_model}
 \input{incl_numerics}
 \input{incl_conclusion}
-\bibliographystyle{unsrt}  % Or any other style you prefer
-\bibliography{mybibliography}  % Reference your .bib file without the .bib extension
+
+
+\printbibliography % Prints the bibliography
+
+% \bibliographystyle{unsrt}  % Or any other style you prefer
+% \bibliography{mybibliography}  % Reference your .bib file without the .bib extension
 \end{document}
